Smart Spiral Knights installer and version bump
- Bump app version to 0.4.2 and refactor the Spiral Knights installation/update flow.
- LauncherActivity now checks for getdown.txt, performs a smart update that only removes extracted resources and the local digest instead of deleting the whole spiral folder, and adjusts update/download UI formatting.
- KnightInstaller was heavily refactored: removed the legacy embedded Linux installer unpack logic and replaced it with a getdown.txt based downloader that fetches digest.txt, compares hashes, selectively downloads only changed files, handles getdown-pro-new.jar, selectively unpacks uresources, and persists the remote digest for future smart updates; JSON generation was moved into a dedicated method.
- Tools JVM arguments were adjusted for Java module access and native access and deprecated/unsafe flags were removed.
- Utils gained helper methods for downloading strings and computing MD5 hashes.
- Overall changes aim to reduce unnecessary downloads, improve update reliability on Android, and modernize JVM options.